--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <button id="boo" data-aos="fade-up" class="whatsapp-button" type="submit">Send</button>
 
-            <input type="hidden" name="_next" value="http://127.0.0.1:3000/index.html#about">
+            <input type="hidden" name="_next" value="https://jafetulate12.github.io/#contact">
             <input type="hidden" name="_captcha" value="false">
         </form>
     </div>
