--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="col-md-6">
                     <h5>Socials Networks</h5>
                     <ul class="list-unstyled">
-                        <li ><a href="#"><box-icon class="logos" name='facebook-circle' type='logo' ></box-icon></a></li>
+                        <li ><a href="#"><box-icon class="logos" name='home-smile'></box-icon></a></li>
                         <li> <a href="https://www.linkedin.com/in/jafeth-ulate-alvarez-19429a290/"><box-icon class="logos" type='logo' name='linkedin-square'></box-icon></a> </li>
                         <li><a href="#" onclick="redirectToWhatsApp()"><box-icon class="logos" type='logo' name='whatsapp-square'></box-icon></a></li>
                         <li><a href="https://www.facebook.com/jafeth.ulate.7?locale=es_LA"><box-icon class="logos" name='facebook-circle' type='logo' ></box-icon></a></li>
