--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             growth in a dynamic environment. Let's connect and explore how I can add value to your team's endeavors.    </p>
         <!-- Botón para descargar el archivo PDF -->
         <button data-aos="fade-up" class="water-button" onclick="downloadPDF()">More Information </button>
+        <button data-aos="fade-up" class="water-button" onclick="downloadPDF2()"> Reference Here </button>
     </div>
 
     <!-- Div debajo de la sección -->
